--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.14.1",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.3.0",
     "next": "16.0.1",
     "next-sanity": "^11.6.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sanity": "^4.14.1",
+    "stripe": "^19.3.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
