--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-sanity": "^11.6.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "resend": "^6.4.2",
     "sanity": "^4.14.1",
     "stripe": "^19.3.0",
     "styled-components": "^6.1.19"
