--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/vision": "^4.14.1",
     "@stripe/react-stripe-js": "^5.3.0",
     "@stripe/stripe-js": "^8.3.0",
+    "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-sanity": "^11.6.5",
     "react": "19.2.0",
