--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@portabletext/react": "^5.0.0",
+    "@react-email/render": "^2.0.0",
+    "@sanity/client": "^7.12.1",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.14.1",
+    "@sanity/visual-editing": "^4.0.0",
     "@stripe/react-stripe-js": "^5.3.0",
     "@stripe/stripe-js": "^8.3.0",
+    "bcryptjs": "^3.0.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
     "next-sanity": "^11.6.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -29,6 +34,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
